tests/golden/error/relative_import_depth2_fail/main.expected
warning: relative import `target` could not be resolved from `outer::middle::deep`
  = help: use absolute import rooted at a top-level module (e.g., `parser::`, `elab::`, `driver::`, `lexer::`)
warning: Phase A.5 global collection failed with 1 error; cross-module imports may not resolve.
  first error: error[E0005]: cannot find module `outer::middle::deep::target or outer::middle::target or target` (at 171..188)
  hint: run `tungsten doctor check phase-a5 <file>` for details
warning: relative import `target` could not be resolved from `outer::middle::deep`
  = help: use absolute import rooted at a top-level module (e.g., `parser::`, `elab::`, `driver::`, `lexer::`)
[E0005] Error: cannot find module `outer::middle::deep::target or outer::middle::target or target`
   ╭─[tests/golden/error/relative_import_depth2_fail/outer/middle/deep.tg:4:7]
   │
 4 │ use target::secret_fn;
   │       ────────┬────────  
   │               ╰────────── 
   │ 
   │ Note: Phase A.5 global collection failed — this error may be caused by a bad import in another module. Run `tungsten doctor check phase-a5 <file>` for details.
───╯

error: aborting due to 1 error
